scoring/errlog/10.log
./scoring/source/10.cpp:1:1: error: unknown type name 'adsfdsf'
adsfdsf
^
./scoring/source/10.cpp:1:8: error: expected unqualified-id
adsfdsf
       ^
2 errors generated.
